--- a/music/index.html
+++ b/music/index.html
@@ -44,7 +44,7 @@
     </section>
     <footer>
         <div class="storage">
-            <a href="javascript:;"></a>
+            <a href="javascript:;" class="like"></a>
         </div>
         <div class="progress">
             <div class="current">00:00</div>
