--- a/drag/drag.html
+++ b/drag/drag.html
@@ -12,6 +12,6 @@
 <body>
 <div></div>
 <script src="event.js"></script>
-<script src="drag.js"></script>
+<script src="drag-drop.js"></script>
 </body>
 </html>
