--- a/other/bind.html
+++ b/other/bind.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>bind</title>
+    <style>
+        *{padding:0;margin: 0;}
+        div{width: 100px;  border-radius: 100%;
+            height: 100px; position: fixed;left: 0;top: 0; background: skyblue;}
+    </style>
 </head>
 <body>
-
+<div></div>
 <script src="bind.js"></script>
 <script>
+    var oDiv =document.getElementsByTagName('div')[0];
+
     var obj={}
     function test(n,m){
         console.log(this,n,m);
     }
-    var end = test.myBind(obj,1,2);
-    end();
+
+    oDiv.onclick = function () {
+        var end = test.myBind(obj,1,2);
+        end();
+    };
 </script>
 </body>
 </html>
